Correct metatag and links aligned on mobile

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -62,6 +62,7 @@ h2 span
     align-items: center;
     height: 100px;
 }
+
 .modal {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 }
@@ -79,10 +80,15 @@ h2 span
 .logo:hover {
 	text-decoration:none;
 }
-@media (max-width:750px){
+@media (max-width:350px){
 	.footer-blurb {
 		text-align: left;
 	}
+	.links {
+	text-align:right;
+	
+
+}
 }
 .links a:hover
 {
